fix: implemented code to fix horizontal overflow for screens from 320px to 430px

--- a/blocks/form.css
+++ b/blocks/form.css
@@ -2,7 +2,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  box-sizing: border-box;
 }
 
 .form > fieldset {
@@ -31,7 +30,6 @@
   width: 385px;
   height: 60px;
   padding: 15px;
-  box-sizing: border-box;
   margin-bottom: 32px;
   border-radius: 5px;
 }
@@ -68,4 +66,31 @@ input[type="checkbox"] {
 .form__submit:hover {
   opacity: 0.7;
   cursor: pointer;
+}
+
+@media screen and (min-width: 320px) and (max-width: 430px) {
+  .form {
+    width: 100%;
+    height: auto;
+  }
+
+  .form > fieldset {
+    max-width: 100%;
+    min-width: 100%;
+    width: 100%;
+  }
+
+  .form__item {
+    width: 100%;
+    position: static;
+    height: auto;
+  }
+
+  input[type="number"] {
+    width: 100%;
+  }
+
+  .form__submit {
+    width: 100%;
+  }
 }
